--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -76,7 +76,7 @@
       </button>
 
       <div class="toggle-mode">
-        <button type="button" (click)="goToLogin()">¿Ya tienes cuenta? Inicia sesión</button>
+        <button type="button" class="text-dark" (click)="goToLogin()">¿Ya tienes cuenta? Inicia sesión</button>
       </div>
     </form>
   </div>
