--- a/src/app/components/qr-inscripcion/qr-inscripcion.component.html
+++ b/src/app/components/qr-inscripcion/qr-inscripcion.component.html
@@ -1,39 +1,56 @@
 <div class="qr-container">
-  <div *ngIf="loading" class="loading">
-    Cargando datos...
-  </div>
-
-  <div *ngIf="error" class="error">
-    {{ error }}
-    <button (click)="actualizarQR()" class="retry-btn">Reintentar</button>
-  </div>
-
-  <div *ngIf="ultimaInscripcion && !loading" class="qr-content">
-    <h3>Última Inscripción</h3>
-    
-    <div class="inscription-info">
-      <p><strong>Nombre:</strong> {{ ultimaInscripcion.fullName }}</p>
-      <p><strong>Email:</strong> {{ ultimaInscripcion.email }}</p>
-      <p><strong>Actividad:</strong> {{ ultimaInscripcion.activity }}</p>
-      <p><strong>Fecha:</strong> {{ ultimaInscripcion.fechaInscripcion }}</p>
+  @if (loading)
+  {
+    <div class="loading">
+      Cargando datos...
     </div>
+  }
 
-    <div class="qr-code">
-      <qrcode
-        [qrdata]="qrData"
-        [width]="256"
-        [errorCorrectionLevel]="'M'"
-        [elementType]="'canvas'"
-        [margin]="4">
-      </qrcode>
+  @if (error)
+  {
+    <div class="error">
+      {{ error }}
+      <button (click)="actualizarQR()" class="retry-btn">Reintentar</button>
     </div>
+  }
 
-    <button (click)="actualizarQR()" class="update-btn">
-      Actualizar QR
-    </button>
-  </div>
+  @if (ultimaInscripcion && !loading)
+  {
+    <div class="qr-content">
+      <!-- <h3>Última Inscripción</h3>
 
-  <div *ngIf="!ultimaInscripcion && !loading && !error" class="no-data">
-    No hay inscripciones disponibles
-  </div>
+      <div class="inscription-info">
+        <p><strong>Nombre:</strong> {{ ultimaInscripcion.fullName }}</p>
+        <p><strong>Email:</strong> {{ ultimaInscripcion.email }}</p>
+        <p><strong>Actividad:</strong> {{ ultimaInscripcion.activity }}</p>
+        <p><strong>Fecha:</strong> {{ ultimaInscripcion.fechaInscripcion }}</p>
+      </div> -->
+
+      <h4 class="mt-4">NOTA</h4>
+      <p>Presenta este QR al llegar a tu curso para poder ingresar.</p>
+
+      <div class="qr-code d-flex justify-content-center">
+        <qrcode
+          [qrdata]="qrData"
+          [width]="256"
+          [errorCorrectionLevel]="'M'"
+          [elementType]="'canvas'"
+          [margin]="4">
+        </qrcode>
+      </div>
+
+      <div class="d-flex justify-content-center">
+        <button (click)="actualizarQR()" class="btn btn-primary">
+            Actualizar QR
+        </button>
+      </div>
+    </div>
+  }
+
+  @if (!ultimaInscripcion && !loading && !error)
+  {
+    <div class="no-data">
+      No hay inscripciones disponibles
+    </div>
+  }
 </div>
