--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -12,7 +12,7 @@
   align-items: center;
   min-height: 100vh;
   background: no-repeat;
-  background-image: url('/gym/fondo.jpg');
+  background-image: url('/assets/fondo.jpg');
   background-position: center;
   background-size: cover;
   padding: 20px;
