--- a/src/app/components/estadisticas/estadisticas.component.css
+++ b/src/app/components/estadisticas/estadisticas.component.css
@@ -6,6 +6,7 @@
   border-radius: 12px;
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
   text-align: center;
+  margin-bottom: 20rem;
 }
 
 .estadisticas-container h2 {
